--- a/index-styles.css
+++ b/index-styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Lemon;
+    src: url(static/Fonts/Louis\ George\ Cafe.ttf);
+}
+
 body {
     padding: 0%;
     margin: 0%;
@@ -49,8 +54,9 @@ header{
     flex-wrap: wrap;
     color: white;
     font-size: 50px;
-    background-image: url(static/Delete/sample.jpg);
+    background-color: #ffff90;
     width: 100%;
+    font-family: 'Lemon';
 }
 
 #welcome-text{
