--- a/index-styles.css
+++ b/index-styles.css
@@ -6,7 +6,7 @@
 body {
     padding: 0%;
     margin: 0%;
-    background-color: black;
+    background-color: rgb(190, 125, 125);
     width: 100%;
 }
 
