--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: Lemon;
-    src: url(static/Fonts/Louis\ George\ Cafe.ttf);
+    src: url(static/Fonts/Lemon\ Brownies.ttf);
 }
 
 body {
     padding: 0%;
     margin: 0%;
-    background-color: rgb(214, 27, 27);
+    background-color: rgb(255, 255, 255);
     width: 100%;
 }
 
@@ -54,9 +54,9 @@ header{
     flex-wrap: wrap;
     color: white;
     font-size: 50px;
-    background-color: #ffff90;
     width: 100%;
     font-family: 'Lemon';
+    background-image: url(static/Images/Front.svg);
 }
 
 #welcome-text{
