--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header{
     color: white;
     font-family: "Trebuchet MS";
     position: absolute;
-    top: 23px;
+    top: 30px;
 }
 /*
 #search-bar{
@@ -56,8 +56,7 @@ header{
     font-size: 50px;
     width: 100%;
     font-family: 'Lemon';
-    background-image: url(static/Images/Front.svg);
-    contain: size;
+    background-color: #f275b4;
 }
 
 #welcome-text{
