--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div>
-                <a href="https://lesliedianne.github.io/bayong"><img id="title" src="../static/images/bayong-title.png" alt="Bayong Homepage"></a>
+                <a href="https://lesliedianne.github.io/bayong.html"><img id="title" src="../static/images/bayong-title.png" alt="Bayong Homepage"></a>
             </div>
 
             <div>
