--- a/templates/bayong.html
+++ b/templates/bayong.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div>
-                <a href="https://lesliedianne.github.io/bayong.html"><img id="title" src="../static/images/bayong-title.png" alt="Bayong Homepage"></a>
+                <img id="title" src="../static/images/bayong-title.png" alt="Bayong">
             </div>
 
             <div>
